src/auth/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
