src/auth/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  labels:
    name: auth
spec:
  rules:
  - host: auth.mp3-converter.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth
            port: 
              number: 8080
